style.css
html, body {
    margin: 0;
    padding: 0;
    height: 100%;
    width: 100%;
}

input {
    background-color: rgb(221, 227, 232);
    border: 0;
    border-radius: 5px;
}

button {
    background-color: rgb(65, 159, 231);
    color: white;
    width: 85px;
    border: 0;
    border-radius: 15px;
    font-weight: bold;
}

svg {
    fill: white;
    width: 1.3em;
    height: 1.3em;
}

#dashboard-header {
    /* allows for equal spacing in gap rows */
    margin-bottom: 0;
}

.content {
    display: grid;
    grid-template-columns: 285px 4fr;
    grid-template-rows: 1fr 4fr;
    height: 100vh;
}

.header {
    grid-column: 2 / -1;
    display: grid;
    grid-template-rows: 1fr 2fr;
    align-items: center;
    font-weight: bold;
}

.header > div, .user-content {
    padding: 45px 40px 60px 25px;
}

.header-first-row {
    display: grid;
    grid-template-columns: 3fr 1fr;
}

.header-first-row > div {
    justify-self: end;
}

.header-second-row {
    display: grid;
    grid-template-columns: 2fr 350px;
    font-size: large;
}

.welcome-msg {
    font-size: small;
}

.header-btns {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    justify-items: end;
}

.dashboard {
    background-color: rgb(65, 159, 231);
    color: white;
    padding-left: 10%;
    grid-row: 1 / -1;
    display: grid;
    grid-template-rows: auto auto 1fr;
    gap: 50px;
}

.dashboard > div {
    font-size: 1.3em;
    font-weight: bold;
}

.messages-img {
    transform: scaleX(-1);
}

.site-nav, .settings-nav {
    display: grid;
    gap: 22px;
    margin-bottom: auto;
}

.user-content {
    background-color: rgb(221, 227, 232);
    display: grid;
    grid-template-columns: 3fr 1fr;
    gap: 25px;
}

.main-side-content {
    display: grid;
    grid-template-rows: 1fr 1fr;
    gap: 35px;
}

.main-projects, .announcements, .trending {
    display: grid;
    grid-template-rows: auto 1fr;
    gap: 15px;
}

.your-project-cards {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: repeat(3, 1fr);
    gap: 25px;
}

.your-project-cards > * {
    background-color: white;
    border-radius: 5px;
    box-shadow: inset 8px 0px rgb(216, 184, 0), 3px 3px 3px rgb(180, 180, 180);
}

.announcement-cards {
    display: grid;
    grid-template-rows: repeat(3, 100px);
    background-color: white;
    border-radius: 5px;
}

.trending-cards {
    display: grid;
    grid-template-rows: repeat(4, 75px);
    background-color: white;
    border-radius: 5px;
}

.announcement-cards, .trending-cards {
    box-shadow: 3px 3px 3px rgb(180, 180, 180);;
}

